<resources>
    <string name="app_name">The Gym Book : Fitness Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="begin_workout">Begin Workout</string>
    <string name="track_diet">Track Diet</string>
    <string name="compounds">Compounds</string>
    <string name="workouts">Workouts</string>
    <string name="diet">Diet</string>
    <string name="stats">Stats</string>
    <string name="calculator">Calculator</string>
    <string name="progress">Progress</string>
    <string name="settings">Settings</string>
    <string name="title_activity_workout_tracker">workout_tracker</string>
    <string name="title_activity_compound_tracker">compound_tracker</string>
    <string name="bench_press">Bench Press</string>
    <string name="personal_best">Personal Best:</string>
    <string name="deadlift">Deadlift</string>
    <string name="squat">Squat</string>
</resources>
