<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_compounds"
            android:title="@string/compounds" />
        <item
            android:id="@+id/nav_workouts"
            android:title="@string/workouts" />
        <item
            android:id="@+id/nav_diet"
            android:title="@string/diet" />
        <item
            android:id="@+id/nav_stats"
            android:title="@string/stats" />
        <item
            android:id="@+id/nav_calculator"
            android:title="@string/calculator" />
        <item
            android:id="@+id/nav_progress"
            android:title="@string/progress" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings" />


    </group>

</menu>
