<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".compound_tracker"
    tools:showIn="@layout/activity_compound_tracker">

    <android.support.v7.widget.CardView
        android:id="@+id/bench_cardView"
        android:layout_width="375dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="#00BCD4"
        app:cardCornerRadius="15dp"
        app:cardElevation="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/benchpress_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/bench_press"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/deadlift_personalbest_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"

                android:layout_marginTop="10dp"
                android:text="@string/personal_best"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/benchpress_label" />

            <TextView
                android:id="@+id/personal_best_deadlift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="TextView"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/deadlift_personalbest_label"
                app:layout_constraintTop_toBottomOf="@+id/benchpress_label" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/deadlift_cardview"
        android:layout_width="375dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="#00BCD4"
        app:cardCornerRadius="15dp"
        app:cardElevation="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bench_cardView" >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/deadlift"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/personal_best"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/deadlift_personalbest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="TextView"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="375dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="#00BCD4"
        app:cardCornerRadius="15dp"
        app:cardElevation="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deadlift_cardview" >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/squat_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/squat"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/squat_personal_besl_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/personal_best"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/squat_label" />

            <TextView
                android:id="@+id/squat_personalbest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="TextView"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/squat_personal_besl_label"
                app:layout_constraintTop_toBottomOf="@+id/squat_label" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>